@@ -1,5 +1,8 @@
 2006-12-21  Marcus Brinkmann  <marcus@g10code.de>
 
+	* cms.c (build_enveloped_data_header): Initialize CMS_TREE.
+	Release CMS_TREE, and also TMPWRT always, just as IMAGE and ROOT.
+
 	* cert.c (ksba_cert_release): Release CERT->image.
 	* ber-decoder.c (release_decoder_state): Release D->image.buf on
 	error.
